# mac-mini-agent

./: .env.sample  .gitignore  CLAUDE.md  README.md  install-launchd.sh  install.sh  justfile
.claude/agents/: listen-drive-and-steer-system-prompt.md
apps/browser/: main.py  pyproject.toml
apps/direct/: client.py  main.py
apps/drive/: main.py  pyproject.toml
apps/drive/commands/: fanout.py  logs.py  poll.py  proc.py  run.py  send.py  session.py
apps/drive/modules/: errors.py  proc.py  sentinel.py  session_manager.py
apps/gmail/: main.py  pyproject.toml
apps/listen/: auth.py  cron_manager.py  db.py  main.py  pyproject.toml  qwen3_tts.py  users.yaml  worker.py
apps/steer/: main.py  pyproject.toml
apps/steer/commands/: apps_cmd.py  click_cmd.py  clipboard_cmd.py  dismiss_cmd.py  drag_cmd.py  find_cmd.py  focus_cmd.py  hotkey_cmd.py  ocr_cmd.py  read_cmd.py  screens_cmd.py  scroll_cmd.py  see.py  status_cmd.py  type_cmd.py  wait_cmd.py  window_cmd.py
apps/steer/modules/: accessibility.py  app_control.py  clipboard_control.py  element_store.py  errors.py  keyboard.py  mouse_control.py  ocr.py  screen_capture.py  tools.py  window_control.py
apps/telegram/: bot.py  main.py  pyproject.toml
apps/workflow/: main.py  pdf_report.py  pyproject.toml
